--- a/universejs/templates/universejs/index.html
+++ b/universejs/templates/universejs/index.html
@@ -4,18 +4,43 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Universe</title>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script src="{% static "js/three.js" %}"></script>
     <script src="{% static "js/OrbitControls.js" %}"></script>
     <script src="{% static 'js/dat.gui.min.js' %}"></script>
     <script src="{% static 'js/libs/stats.min.js' %}"></script>
     <script src="{% static 'js/Detector.js' %}"></script>
     <script src="{% static 'js/GLTFLoader.js' %}"></script>
+    <script src="{% static 'js/FBXLoader.js' %}"></script>
+    <script src="{% static 'js/libs/inflate.min.js' %}"></script>
     <script src="{% static 'js/GPUComputationRenderer.js' %}"></script>
 </head>
 <body>
 
 </body>
 {% block js %}
+    <script type="application/x-glsl" id="sky-vertex">
+    varying vec2 vUV;
+
+    void main() {
+      vUV = uv;
+      vec4 pos = vec4(position, 1.0);
+      gl_Position = projectionMatrix * modelViewMatrix * pos;
+    }
+    </script>
+
+    <script type="application/x-glsl" id="sky-fragment">
+    uniform sampler2D texture;
+    varying vec2 vUV;
+
+    void main() {
+      vec4 sample = texture2D(texture, vUV);
+      gl_FragColor = vec4(sample.xyz, sample.w);
+    }
+    </script>
     <script>
 
     if (!Detector.webgl) Detector.addGetWebGLMessage();
@@ -77,7 +102,9 @@
 
         initGUI();
         // loader();
+
         generateSphere(100);
+        skypedome();
 
 
         dynamicValuesChanger();
@@ -95,6 +122,38 @@
 
     function applyTexture() {
         ;
+    }
+
+    function skypedome() {
+        var geometry = new THREE.SphereGeometry(3000, 60, 40);
+        var uniforms = {
+          texture: { type: 't', value: THREE.TextureLoader('{% static "assets/solar_system/MilkyWayPanorama8K.jpg" %}') }
+        };
+
+        var material = new THREE.ShaderMaterial( {
+          uniforms:       uniforms,
+          vertexShader:   document.getElementById('sky-vertex').textContent,
+          fragmentShader: document.getElementById('sky-fragment').textContent
+        });
+
+        skyBox = new THREE.Mesh(geometry, material);
+        skyBox.scale.set(-1, 1, 1);
+        skyBox.eulerOrder = 'XZY';
+        skyBox.renderDepth = 1000.0;
+        scene.add(skyBox);
+    }
+
+    function generatePlanet(radius, segments) {
+        return new THREE.Mesh(
+            new THREE.SphereGeometry(radius, segments, segments),
+            new THREE.MeshPhongMaterial({
+				map:         THREE.ImageUtils.loadTexture('images/2_no_clouds_4k.jpg'),
+				bumpMap:     THREE.ImageUtils.loadTexture('images/elev_bump_4k.jpg'),
+				bumpScale:   0.005,
+				specularMap: THREE.ImageUtils.loadTexture('images/water_4k.png'),
+				specular:    new THREE.Color('grey')
+			})
+        )
     }
 
     function generateSphere(size) {
